--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Modifiez le nom de votre style ici -->
-    <title>[Your Style Title] by [Your Name] | Style Stage</title>
+    <title>[MINIMALISM STYLE] by [Jeanlin Rousseil] | Style Stage</title>
     <meta name="description" content="[Your optional description]" />
 
     <!-- Ajoutez vos Google Fonts ici, avant l'importation de votre fichier "style.css" -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Kufam&display=swap" rel="stylesheet">
 
     <link href="style.css" rel="stylesheet" />
   </head>
