--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="[Your optional description]" />
 
     <!-- Ajoutez vos Google Fonts ici, avant l'importation de votre fichier "style.css" -->
-    <link href="https://fonts.googleapis.com/css2?family=Kufam&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
 
     <link href="style.css" rel="stylesheet" />
   </head>
